@@ -769,6 +769,9 @@ inlead,	   0x5C32F0,	0x5D1F20,	0x5C3000,	"Unit_ai_can_sacrifice",			"bool (__fas
 inlead,	   0x4C5A10,	0x4CD2C0,	0x4C5A30,	"Map_Renderer_load_images",			"void (__fastcall *) (Map_Renderer *this, int edx)"
 define,	   0x446114,	0x447EF6,	0x446194,	"ADDR_CITY_LIM_CMP_IN_CONT_BEGIN_TURN",		"byte *"
 define,	   0x5663F0,	0x57275D,	0x5663A0,	"ADDR_CITY_LIM_CMP_IN_CREATE_CITY",		"byte *"
+define,	   0x4F8D76,	0x5024E6,	0x4F8E36,	"ADDR_CULTURE_DOUBLING_TIME_CMP_INSTR",		"byte *"
+define,	   0x4C2420,	0x4C9C10,	0x4C2440,	"Buildings_Info_get_age_in_years",		"int (__fastcall *) (Buildings_Info * this, int edx, int building_index)"
+repl call, 0x4B073C,	0x4B76F0,	0x4B07CC,	"Buildings_Info_get_age_in_years_for_tourism",	""
 
 ignore,	   0x5FC710,	0x0,		0x0,		"PCX_Image_create_and_init_jgl_image",		"int (__fastcall *) (PCX_Image * this, int edx, int width, int height, int bit_depth, int param_4, int param_5, int param_6)"
 ignore,	   0x5FCC50,	0x0,		0x0,		"PCX_Image_draw_region_to_location",		"void (__fastcall *) (PCX_Image * this, int edx, PCX_Image * canvas, int src_x, int src_y, int dest_x, int dest_y, int width, int height)"
