@@ -720,6 +720,14 @@ limit_unit_loading_to_one_transport_per_turn = false
 ; unique units, so the mod won't do that. You must clear the upgrade ability from Sipahi and Cossack as well to block those civs there instead.
 prevent_old_units_from_upgrading_past_ability_block = false
 
+; Buildings double their culture production this many years after they were built. For standard game rules, set to 1000.
+years_to_double_building_culture = 1000
+
+; Controls how long it takes for wonders to produce tourism gold as a percent of the standard rate. For example, if set to 200, it would take 2000
+; years to begin generating 2 GPT tourism, instead of the standard 1000 years, and 3000 years for 4 GPT, instead of the standard 1500. This setting is
+; effectively a scaling factor on the tourism time thresholds. For standard rules, set to 100.
+tourism_time_scale_percent = 100
+
 [=======================]
 [=== DAY/NIGHT CYCLE ===]
 [=======================]
