@@ -2,8 +2,10 @@
   - Setting named lift_city_limit, included in new "Limits Removed" section with other limit increases/removals
 - Enable tile graphics to cycle over day and night, see "Day/Night Cycle" section of default config for details
 - Allow Civilopedia descriptions for units, civilizations, and game concepts to span multiple pages
+- Can adjust time to double building culture, setting named years_to_double_building_culture
 - Option to prevent units from upgrading past an intermediate type that does not have the upgrade ability
   - Setting named prevent_old_units_from_upgrading_past_ability_block
+- Can adjust times to generate tourism gold, setting named tourism_time_scale_percent
 - Option to show some popup messages as online-multiplayer-style notifications
   - Setting named convert_some_popups_into_online_mp_messages, off by default, see config for which popups are affected
 - Option to switch debug mode on or off for games in progress
